--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -7,26 +7,32 @@
 	-webkit-font-smoothing:antialiased;
 }
 ::selection {
-	background:red;
+	background:#dc8100;
 	color:white;
 	text-shadow:none;
 }
 ::-moz-selection {
-	background:red;
+	background:#dc8100;
 	color:white;
 	text-shadow:none;
 }
 html {
-	height:100%;
+	height:auto;
+	min-height:100%;
 	width:100%;
 	font:100%/1.5 sans-serif;
 	overflow:auto;
 	line-height:1.5;
-	color:white;
-	background:#040407;
+	color:#666;
+	background:#efefef;
 	position:relative;
 	letter-spacing:normal;
+	border:2px solid #0BAADB;
+	text-shadow:0 1px 0 rgba(255,255,255,0.5);
 }
+/*html.thoughts {
+	background:#efefef;
+}*/
 body {
 	width:100%;
 	height:100%;
@@ -39,6 +45,10 @@ h1 { font-size:2.5em; }
 h2 { font-size:2em; }
 h3 { font-size:1.5em; }
 
+h1, h2, h3, h4, p {
+	margin:1em 0 .3em;
+}
+
 .cf:before, .cf:after, header:before, header:after { content:""; display:table; }
 .cf:after, .clear, header:after { clear:both; }
 .cf, header { *zoom:1; }
@@ -49,11 +59,22 @@ a {
 	-moz-transition:.2s all ease-out;
 	transition:.2s all ease-out;
 }
+a:active {
+	-webkit-transition:none;
+	-moz-transition:none;
+	transition:none;
+}
 
 header {
-	background:#0BAADB;
+	background: #0BAADB;
+	background: -webkit-gradient(linear, 0 0, 0 bottom, from(#0BAADB), to(#109BC6));
+	background: -webkit-linear-gradient(#0BAADB, #109BC6);
+	background: -moz-linear-gradient(#0BAADB, #109BC6);
+	background: -ms-linear-gradient(#0BAADB, #109BC6);
+	background: -o-linear-gradient(#0BAADB, #109BC6);
+	background: linear-gradient(#0BAADB, #109BC6);
 	position:relative;
-	margin:0 0 1em;
+	margin:0;
 	text-shadow:0 1px 0 rgba(0,0,0,0.2), 0 2px 1px rgba(0,0,0,0.1);
 }
 header h2 {
@@ -64,12 +85,13 @@ header h2 {
 	position:relative;
 	z-index:2;
 }
-header h2:after {
+/*header h2:after {
 	content:attr(data-icon);
 	position:relative;
 	right:-.25em;
+	color:white;
 	-webkit-font-smoothing:subpixel-antialiased;
-}
+}*/
 header h2 a {
 	color:white;
 }
@@ -156,7 +178,7 @@ header a {
 }
 
 figure {
-	margin:0 0 1em;
+	margin:0;
 	position:relative;
 }
 figure a {
@@ -170,6 +192,27 @@ figure a {
 	-moz-transition:.2s all ease-out;
 	transition:.2s all ease-out;
 }
+
+figure.mood a {
+	background:url(http://jefff.co/images/css-mood-board.png) no-repeat 0 0;
+}
+
+.works figure a {
+	height:70px;
+	
+}
+.works figure {
+	height:70px;
+	width:100%;
+	background:#0BAADB;
+	overflow:hidden;
+}
+.works figure a h1 {
+	bottom:25px;
+	right:25px;
+	text-align:right;
+}
+
 figure a:hover {
 	box-shadow:0 0 5px rgba(0,0,0,0.5) inset, 0 0 25px rgba(0,0,0,0.25) inset;
 	opacity:.8;
@@ -178,7 +221,7 @@ figure img {
 	max-width:100%;
 	display:block;
 }
-figure h1 {
+figure h1, .inner.thoughts .sub figure h1 {
 	position:absolute;
 	bottom:0;
 	right:0;
@@ -189,6 +232,51 @@ figure h1 {
 	color:white;
 	font-size:100%;
 	text-shadow:0 1px 0 rgba(0,0,0,0.2), 0 2px 1px rgba(0,0,0,0.1);
+}
+.inner.thoughts .sub figure h1 {
+	display:block;
+	height:auto;
+	width:auto;
+}
+.inner figure h1 {
+	text-align:center;
+	background:none;
+	width:100%;
+	padding:0;
+}
+.inner figure h1 span {
+	background:#0BAADB;
+	line-height:1;
+	padding:1em;
+	margin:0;
+	position:relative;
+	top:-1.05em;
+	color:white;
+	font-size:100%;
+	text-shadow:0 1px 0 rgba(0,0,0,0.2), 0 2px 1px rgba(0,0,0,0.1);
+}
+[role=main] header {
+	display:table;
+	background:url(../images/instagram.jpg) no-repeat center center;
+	background-size:cover;
+	height:15em;
+	margin:0 0 1.5em;
+	width:100%;
+	box-shadow:0 0 5px rgba(0,0,0,0.25) inset, 0 0 25px rgba(0,0,0,0.15) inset;
+}
+[role=main] header h1 {
+	position:static;
+	display:table-cell;
+	height:100%;
+	vertical-align:middle;
+	font-size:300%;
+	padding:0 1em;
+	color:white;
+	text-align:center;
+}
+.inner figure img {
+	max-width:auto;
+	margin:0 auto;
 }
 
 [role=main] {
@@ -202,6 +290,9 @@ figure h1 {
 [role=main] ul, footer ul {
 	margin:0 auto;
 	padding:0;
+}
+[role=main] h2 + ul {
+	margin-top:2em;
 }
 footer ul {
 	padding-bottom:.75em;
@@ -223,8 +314,11 @@ li a {
 	text-decoration:none;
 	text-shadow:0 1px 0 rgba(0,0,0,0.2), 0 2px 1px rgba(0,0,0,0.1);
 }
+li a:hover {
+	background:#0987AD;
+}
 li a:active {
-	opacity:.75;
+	background:#037699;
 	padding-top:1.05em;
 	padding-bottom:.95em;
 }
@@ -237,7 +331,7 @@ li a:before {
 
 .button {
 	display:block;
-	margin:2em auto 0;
+	margin:2em auto 1em;
 	width:100%;
 	background:#0BAADB;
 	color:white;
@@ -252,12 +346,18 @@ li a:before {
 	left:-.5em;
 	-webkit-font-smoothing:subpixel-antialiased;
 }
+.button:hover {
+	background:#0987AD;
+}
+.button:active {
+	background:#037699;
+	padding:.6em .5em .4em;
+}
 
 footer h3 {
-	border-top:1px solid rgba(255,255,255,0.25);
+	border-top:1px solid rgba(0,0,0,0.05);
 	padding-top:3em;
-	margin-left:.75em;
-	margin-right:.75em;
+	margin:0 .75em 1.5em;
 }
 footer hr {
 	background:none;
@@ -273,10 +373,9 @@ hr:before {
 	display:block;
 	text-align:center;
 	margin:2em 0;
-	color:#0BAADB;
+	color:#999;
 }
 footer div {
-	color:#0BAADB;
 	opacity:.7;
 	padding:0 1em 2em;
 	text-align:center;
@@ -287,26 +386,67 @@ footer div p:last-child {
 footer li a {
 	background:#555;
 }
+footer li a:hover {
+	background:#333;
+}
+footer li a:active {
+	background:#333;
+	color:rgba(255,255,255,0.75);
+}
 
 .details {
 	padding:1em 1em 0;
 }
-.details h2:before {
+.details h2:before, article h2:before {
 	content:attr(data-icon);
 	display:block;
 	opacity:.35;
 	padding:0 0 .5em;
 	-webkit-font-smoothing:subpixel-antialiased;
 }
+article h2 {
+	position:relative;
+}
+article .h span {
+	float:right;
+	font-size:60%;
+	font-weight:normal;
+	opacity:.5;
+	position:relative;
+	top:.4em;
+}
+article h2:before {
+	display:block;
+}
+small, .pad-bot {
+	display:block;
+	margin:1em 0;
+}
 [role=main] .details h2 {
 	padding:0;
+}
+
+article {
+	padding:1em;
+}
+.thoughts article ol, .thoughts article ul {
+	margin:1em 0;
+	padding:0 0 0 3em;
+}
+article li, .thoughts article h2 {
+	text-align:left;
+	padding:0;
+}
+.thoughts article li {
+	list-style:disc;
+	margin:0 0 .5em;
 }
 
 @media screen and (min-width:30em) {
 	figure a {
 		min-height:25em;
 	}
-	.sub, footer, .details, .button {
+	.sub, footer, .details, .button, article {
 		width:25em;
 		margin-left:auto;
 		margin-right:auto;
@@ -318,12 +458,21 @@ footer li a {
 	.details {
 		padding:1em 0 0;
 	}
+	.inner.thoughts figure h1 {
+		padding:0 2em;
+	}
+	article h2:before {
+		display:inline-block;
+		position:absolute;
+		top:-.1em;
+		left:-1em;
+	}
 }
 @media screen and (min-width:50em) {
 	figure a {
 		min-height:35em;
 	}
-	.sub, footer {
+	.sub, footer, article {
 		width:45em;
 	}
 	footer div {
