--- a/_layouts/works_entry.html
+++ b/_layouts/works_entry.html
@@ -1,9 +1,12 @@
 ---
 layout: default
 ---
-<header>
-	<h1>{{page.title}}</h1>
-</header>
-<article>
-	{{ content }}
-</article>
+<div class="work">
+	<figure>
+		<h1><span>{{page.title}}</span></h1>
+		<img src="{{ page.image }}" />
+	</figure>
+	<div class="details">
+		{{ content }}
+	</div>
+</div>
