Updates for gamma version

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 	<title dir="ltr">{% if page.title %} {{ page.title }} | {% endif %} Jefff.co</title>
 	<meta name="description" content="" />
 	
-	<link href='http://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700' rel='stylesheet' type='text/css' /> 
+	<link href='http://fonts.googleapis.com/css?family=Domine:400,700' rel='stylesheet' type='text/css' />
 	<link href="/stylesheets/app.css" rel="stylesheet" type="text/css" />
 	
 	<script type="text/javascript">
@@ -23,7 +23,7 @@
 </head>
 <body>
 	<header role="banner">
-		<h2 data-icon="☁"><a href=""><span>made by</span> jefff</a></h2>
+		<h2 data-icon="☁"><a href="/"><span>made by</span> jefff</a></h2>
 		<h3 data-icon="⚙"><a href="#menu"></a></h3>
 	</header>
 	<div role="main">
@@ -37,7 +37,7 @@
 			<li><a href="/about">About</a></li>
 			<li><a href="">Resume</a></li>
 			<li><a href="http://twitter.com/jefffis">Twitter</a></li>
-			<li><a href="/" data-icon="↟">Home</a></li>
+			<li><a href="/" data-icon="↻">Home</a></li>
 		</ul>
 		<hr data-icon="☂" />
 		<div>
