--- a/_layouts/thoughts_entry.html
+++ b/_layouts/thoughts_entry.html
@@ -8,6 +8,6 @@ layout: default
 	<article>
 		<h2 class="h" data-icon="⚒">{{page.date | date: "%B %d %Y"}}</h2>
 		{{ content }}
-		<a href="/thoughts" class="button" data-icon="✈">Back to Thoughts</a>
+		<a href="/thoughts" class="button" data-icon="⇤">Back to Thoughts</a>
 	</article>
 </div>
