More updates for gamma

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 	<title dir="ltr">{% if page.title %} {{ page.title }} | {% endif %} Jefff.co</title>
 	<meta name="description" content="" />
 	
-	<link href='http://fonts.googleapis.com/css?family=Domine:400,700' rel='stylesheet' type='text/css' />
+	<link href='http://fonts.googleapis.com/css?family=Domine:400,700|Arimo:400,700,400italic,700italic' rel='stylesheet' type='text/css' />
 	<link href="/stylesheets/app.css" rel="stylesheet" type="text/css" />
 	
 	<script type="text/javascript">
@@ -32,12 +32,12 @@
 	<footer id="menu">
 		<h3 data-icon="☰">Navigation</h3>
 		<ul>
-			<li><a href="/work">Work</a></li>
-			<li><a href="/thoughts">Thoughts</a></li>
-			<li><a href="/about">About</a></li>
-			<li><a href="">Resume</a></li>
-			<li><a href="http://twitter.com/jefffis">Twitter</a></li>
-			<li><a href="/" data-icon="↻">Home</a></li>
+			<li><a href="/work">Recent work</a></li>
+			<li><a href="/thoughts">Recent thoughts</a></li>
+			<li><a href="/about">More about Jefff</a></li>
+			<li><a href="">Check my résumé</a></li>
+			<li><a href="http://twitter.com/jefffis">Follow me on twitter</a></li>
+			<li><a href="/" data-icon="↻">Back home</a></li>
 		</ul>
 		<hr data-icon="☂" />
 		<div>
