--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,9 @@
 		</ul>
 		<hr data-icon="☂" />
 		<div>
-			<p><strong>Jeff Doan</strong> is a web designer/front-end tinkerer living and working in good ol&rsquo; Arlington, VA.</p>
-			<h4>&copy; 20-something&mdash;2012; built with jekyll, lots of UNICODE-ness and some other trickery.</h4>
+			<h4>Jeff Doan is a web designer/front-end tinkerer living and working in good ol&rsquo; Arlington, VA.</h4>
+			<h4>&copy; 20-something&mdash;{{ site.time | date: "%Y" }}</h4>
+			<h4>Built with jekyll, markdown, minimal images, no JavaScript (except for Analytics), and lots of UNICODE-ness.</h4>
 			<p>Reading Now: <a href="http://www.amazon.com/The-Twelve-Book-Passage-Trilogy/dp/0345504984" target="_blank">The Twelve</a>,<br />just finished <a href="http://www.amazon.com/The-Prague-Cemetery-Umberto-Eco/dp/0547577532" target="_blank">The Prague Cemetery</a>.</p>
 		</div>
 	</footer>
