--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,5 @@
 <!doctype html>
-{% if page.url != '/' %}
-<html lang="en-us" class="inner{% if page.url == '/work/*' %} thoughts{% endif %}">
-{% else %}
-<html lang="en-us">
-{% endif %}
+{% if page.url != '/index.html' %}<html lang="en-us" class="inner{% if page.url == '/work/*' %} thoughts{% endif %}">{% else %}<html lang="en-us" class="home">{% endif %}
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1">
