--- a/_layouts/thoughts_entry.html
+++ b/_layouts/thoughts_entry.html
@@ -10,7 +10,7 @@ layout: default
 		{{ content }}
 		<a href="/thoughts" class="button" data-icon="⇤">Back to Thoughts</a>
 	</article>
-	<div class="sub">
+	<!--<div class="sub">
 		<h2>Related Work/Thoughts</h2>
 		<ul>
 		{% for post in site.related_posts %}
@@ -23,5 +23,5 @@ layout: default
 			</li>
 		{% endfor %}
 		</ul>
-	</div>
+	</div>-->
 </div>
