--- a/_layouts/works_entry.html
+++ b/_layouts/works_entry.html
@@ -19,7 +19,7 @@ layout: default
 	{% else %}
 	{{ content }}
 	{% endif %}
-	<a href="/work" class="button" data-icon="⇤">Back to Work</a>
+	<div class="ex"><a href="/work" class="button" data-icon="⇤">Back to Work</a></div>
 	<!--<div class="sub">
 		<h2>Related Work/Thoughts</h2>
 		<ul>
