--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -457,6 +457,9 @@ article img {
 	text-decoration:none;
 	text-shadow:0 1px 0 rgba(0,0,0,0.2), 0 2px 1px rgba(0,0,0,0.1);
 }
+.ex {
+	padding:0 1em;
+}
 .view-more {
 	margin-bottom:1.5em;
 }
