--- a/_layouts/thoughts_entry.html
+++ b/_layouts/thoughts_entry.html
@@ -6,7 +6,7 @@ layout: default
 		<h1>{{page.title}}</h1>
 	</header>
 	<article>
-		<h2 class="h" data-icon="⚒">{{page.date | date: "%B %d %Y"}}</h2>
+		<h2 class="h" data-icon="⚒">{{page.date | date: "%b %d %Y"}}</h2>
 		{{ content }}
 		<a href="/thoughts" class="button" data-icon="⇤">Back to Thoughts</a>
 	</article>
