--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -384,6 +384,13 @@ li a {
 	text-decoration:none;
 	text-shadow:0 1px 0 rgba(0,0,0,0.2), 0 2px 1px rgba(0,0,0,0.1);
 }
+li a span {
+	font-size:70%;
+	text-transform:uppercase;
+	opacity:.75;
+	display:inline-block;
+	padding:0 0 0 .5em;
+}
 li a.alt {
 	background:#7bc9b6;
 }
