--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,9 +15,17 @@
 	<link href="/stylesheets/app.css" rel="stylesheet" type="text/css" />
 	
 	<script type="text/javascript">
-	
-	//ga stuffs
-	
+
+	var _gaq = _gaq || [];
+	_gaq.push(['_setAccount', 'UA-22790184-1']);
+	_gaq.push(['_trackPageview']);
+
+	(function() {
+	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	ga.src = ('https:' == document.location.protocol ? 'https://ssl' :'http://www') + '.google-analytics.com/ga.js';
+	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	})();
+
 	</script>
 </head>
 <body>
@@ -36,6 +44,7 @@
 			<li><a href="/about">More about Jefff</a></li>
 			<!--<li><a href="/resume">Check my résumé</a></li>-->
 			<li><a href="http://twitter.com/jefffis">Follow me on twitter</a></li>
+			<li><a href="mailto:iam@jefff.co">Gimme a shout</a></li>
 			<li><a href="/" data-icon="↻">Back home</a></li>
 		</ul>
 		<hr data-icon="☂" />
