--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -30,11 +30,11 @@ html {
 	/*border:2px solid #0BAADB;*/
 	text-shadow:0 1px 0 rgba(255,255,255,0.5);
 }
-html.resume {
+/*html.resume {
 	background:#272822;
 	color:white;
 	text-shadow:0 1px 0 rgba(0,0,0,0.5);
-}
+}*/
 body {
 	width:100%;
 	height:100%;
@@ -558,9 +558,9 @@ footer li a:active {
 }
 .details.r * {
 	text-align:left;
-	font-family:Consolas, Inconsolata, Monaco, monospace;
+	/*font-family:Consolas, Inconsolata, Monaco, monospace;*/
 }
-.details.r h3, .details.r h3 strong {
+/*.details.r h3, .details.r h3 strong {
 	font-size:100%;
 	margin:-.5em 0 1em;
 	color:#75715e;
@@ -614,7 +614,7 @@ footer li a:active {
 	font-style:normal;
 	font-weight:normal;
 	color:#f92772;
-}
+}*/
 article h2 {
 	position:relative;
 }
