--- a/_layouts/works_entry.html
+++ b/_layouts/works_entry.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<header class="work">
+<header class="work i">
 	<h1>{{ page.title }}</h1>
 
 	{{ current_post.work_next }}
