--- a/_layouts/thoughts_entry.html
+++ b/_layouts/thoughts_entry.html
@@ -8,7 +8,7 @@ layout: default
 	<article>
 		<h2 class="h" data-icon="⚒">{{page.date | date: "%b %d %Y"}}</h2>
 		{{ content }}
-		<a href="/thoughts" class="button" data-icon="⇤">Back to Thoughts</a>
+		<a href="/thoughts" class="button prose" data-icon="⇤">Back to Thoughts</a>
 	</article>
 	<!--<div class="sub">
 		<h2>Related Work/Thoughts</h2>
