Add in landing page post

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
 		<div>
 			<h4>Jeff Doan is a web designer/front-end tinkerer living and working in good ol&rsquo; Arlington, VA.</h4>
 			<h4>&copy; 20-something&mdash;{{ site.time | date: "%Y" }}</h4>
-			<h4>Built with jekyll, markdown, minimal images, no JavaScript (except for Analytics), and lots of UNICODE-ness.</h4>
+			<h4>Built with jekyll, markdown, minimal images, no JavaScript (except for Analytics), and lots of Unicode-ness.</h4>
 			<p>Reading Now: <a href="http://www.amazon.com/The-Twelve-Book-Passage-Trilogy/dp/0345504984">The Twelve</a>,<br />just finished <a href="http://www.amazon.com/The-Prague-Cemetery-Umberto-Eco/dp/0547577532">The Prague Cemetery</a>.</p>
 		</div>
 	</footer>
