--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -686,6 +686,9 @@ small, .pad-bot {
 [role=main] .details h2 {
 	padding:0;
 }
+.details h2.a {
+	margin-top:0;
+}
 
 article {
 	padding:1em;
@@ -766,6 +769,9 @@ article li, .thoughts article h2 {
 		position:absolute;
 		top:.1em;
 		right:0;
+	}
+	.details h2.a {
+		margin-top:1.25em;
 	}
 }
 @media screen and (min-width:50em) {
