Updates to include tmcrnch

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -208,7 +208,7 @@ figure {
 	position:relative;
 }
 figure.featured {
-	background:url(http://jefff.co/images/large/dailytidbit.jpg) no-repeat 0 0;
+	background:url(http://jefff.co/images/tmcrnch.jpg) no-repeat 0 0;
 	background-size:cover;
 	min-height:15em;
 	box-shadow:0 0 5px rgba(0,0,0,0.25) inset, 0 0 25px rgba(0,0,0,0.15) inset;
