Add in template for case studies

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-us" class="{% if page.url == '/resume/index.html' %}inner resume{% else if page.url != '/index.html' %}inner{% else %}home{% endif %}">
+<html lang="en-us" class="{% if page.url == '/resume/index.html' %}inner resume{% else if page.url == '/case/index.html' %}inner case{% else if page.url != '/index.html' %}inner{% else %}home{% endif %}">
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" />
@@ -48,6 +48,7 @@
 		<h3 data-icon="☰">Navigation</h3>
 		<ul>
 			<li><a href="/work">Recent work</a></li>
+			<li><a href="/case-studies">Case studies</a></li>
 			<li><a href="/thoughts">Recent thoughts</a></li>
 			<li><a href="/about">More about Jefff</a></li>
 			<li><a href="/resume">Check my résumé</a></li>
