--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -254,6 +254,10 @@ figure a {
 	background:#0BAADB;
 }
 
+.case figure + .details {
+	padding-top:0;
+}
+
 /*figure a:hover {
 	box-shadow:0 0 5px rgba(0,0,0,0.5) inset, 0 0 25px rgba(0,0,0,0.25) inset;
 	opacity:.8;
