Updates for case study for neustar

--- a/_layouts/case_entry.html
+++ b/_layouts/case_entry.html
@@ -30,5 +30,5 @@ layout: default
 		{% endif %}	
 	</figure>
 	{% endif %}
-	<div class="ex"><a href="/case-studies" class="button" data-icon="⇤">Back to Case Studies</a></div>
+	<!--<div class="ex"><a href="/case-studies" class="button" data-icon="⇤">Back to Case Studies</a></div>-->
 </div>
