--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
 		<h3 data-icon="☰">Navigation</h3>
 		<ul>
 			<li><a href="/work">Recent work</a></li>
-			<li><a href="/case-studies">Case studies</a></li>
+			<!--<li><a href="/case-studies">Case studies</a></li>-->
 			<li><a href="/thoughts">Recent thoughts</a></li>
 			<li><a href="/about">More about Jefff</a></li>
 			<li><a href="/resume">Check my résumé</a></li>
