--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -254,6 +254,31 @@ figure a {
 	background:#0BAADB;
 }
 
+.case figure img {
+	border:3px solid #ccc;
+}
+.case .details.c h2 {
+	margin:0;
+}
+
+.details.f img {
+	display:block;
+	margin:0 auto;
+}
+/*.details.f {
+	float:left;
+	max-width:35em;
+	padding:0 0 0 10em;
+}
+.details.f * {
+	text-align:left;
+	padding:0;
+}
+img.f {
+	float:right;
+	margin:2em 5em 0 0;
+}*/
+
 .case figure + .details {
 	padding-top:0;
 }
@@ -478,6 +503,7 @@ article img {
 }
 
 .button, .view-more {
+	clear:both;
 	display:block;
 	margin:2em auto 1em;
 	width:100%;
